# ik_nonlinear_solver

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: API.md  DEPLOY.md
examples/: 01_minimal_solve.py  02_trajectory_tracking.py
models/: ll100_lh420_nmpc.urdf
nonlinear_ik/: __init__.py  solver.py
